err/p2psip.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/p2psip'...
Listing './lib/python3.5/site-packages/p2psip/app'...
Compiling './lib/python3.5/site-packages/p2psip/app/crypto.py'...
***   File "./lib/python3.5/site-packages/p2psip/app/crypto.py", line 11
    except: print 'WARNING: cannot import OpenSSL.crypto'
                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/p2psip/app/dht.py'...
***   File "./lib/python3.5/site-packages/p2psip/app/dht.py", line 132
    if r<0 or t<0: raise ValueError, 'invalid attribute', attr
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p2psip/app/dhtgui.py'...
***   File "./lib/python3.5/site-packages/p2psip/app/dhtgui.py", line 41
    print "%s:%s: %s" % (name, lineno, line.rstrip())
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p2psip/app/gchat.py'...
***   File "./lib/python3.5/site-packages/p2psip/app/gchat.py", line 17
    print '< %s'%(msg.body.cdata,)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p2psip/app/opendht.py'...
***   File "./lib/python3.5/site-packages/p2psip/app/opendht.py", line 66
    print put('kundan', 'Kundan Singh')
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p2psip/app/p2p.py'...
***   File "./lib/python3.5/site-packages/p2psip/app/p2p.py", line 70
    except socket.error, E: # on windows we get this error (10049) when binding to multicast addr
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p2psip/app/p2psip.py'...
***   File "./lib/python3.5/site-packages/p2psip/app/p2psip.py", line 84
    if _debug: print 'starting agent on', sipaddr
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/p2psip/app/sipapi.py'...
***   File "./lib/python3.5/site-packages/p2psip/app/sipapi.py", line 162
    else: raise ValueError, 'invalid socket type'
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p2psip/app/sipcaller.py'...
***   File "./lib/python3.5/site-packages/p2psip/app/sipcaller.py", line 114
    except ImportError: print 'Please install gevent and its dependencies and include them in your PYTHONPATH'; import sys; sys.exit(1)
                                                                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p2psip/app/sipd.py'...
***   File "./lib/python3.5/site-packages/p2psip/app/sipd.py", line 40
    print 'must use multiple --local option with multiple --transport option'
                                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/p2psip/app/voip.py'...
***   File "./lib/python3.5/site-packages/p2psip/app/voip.py", line 238
    if _debug: print 'User created on listening=', sock.getsockname(), 'advertised=', self.sockaddr
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/p2psip/external'...
Compiling './lib/python3.5/site-packages/p2psip/external/dns.py'...
***   File "./lib/python3.5/site-packages/p2psip/external/dns.py", line 204
    print "%s.py: %s <<" % (__name__, self._name)
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p2psip/external/multitask.py'...
***   File "./lib/python3.5/site-packages/p2psip/external/multitask.py", line 964
    except StopIteration, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p2psip/external/simplexml.py'...
***   File "./lib/python3.5/site-packages/p2psip/external/simplexml.py", line 185
    exec 'self._parser.%s = self._%s'%(n, n) # TODO: should avoid calling exec
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p2psip/external/w32util.py'...
***   File "./lib/python3.5/site-packages/p2psip/external/w32util.py", line 104
    print "Name servers:",RegistryResolve()
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/p2psip/std'...
Compiling './lib/python3.5/site-packages/p2psip/std/kutil.py'...
***   File "./lib/python3.5/site-packages/p2psip/std/kutil.py", line 177
    print 'timedout', timer.delay
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/p2psip/std/rfc2198.py'...
***   File "./lib/python3.5/site-packages/p2psip/std/rfc2198.py", line 42
    print ts, tsoffset
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/p2psip/std/rfc2396.py'...
***   File "./lib/python3.5/site-packages/p2psip/std/rfc2396.py", line 100
    raise ValueError, 'Invalid URI(' + value + ')'
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p2psip/std/rfc2617.py'...
***   File "./lib/python3.5/site-packages/p2psip/std/rfc2617.py", line 33
    else: raise ValueError, 'invalid authMethod%s'%(authMethod)
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p2psip/std/rfc3261.py'...
***   File "./lib/python3.5/site-packages/p2psip/std/rfc3261.py", line 134
    if _debug: print 'error parsing parameters'; traceback.print_exc()
                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p2psip/std/rfc3263.py'...
***   File "./lib/python3.5/site-packages/p2psip/std/rfc3263.py", line 76
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p2psip/std/rfc3489bis.py'...
***   File "./lib/python3.5/site-packages/p2psip/std/rfc3489bis.py", line 101
    else: raise ValueError, 'XOR-ADDRESS not implemented for IPv6'
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p2psip/std/rfc3550.py'...
***   File "./lib/python3.5/site-packages/p2psip/std/rfc3550.py", line 19
    except: print 'could not import multitask from rfc3550'
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/p2psip/std/rfc3920.py'...
***   File "./lib/python3.5/site-packages/p2psip/std/rfc3920.py", line 17
    def succeed(result): raise StopIteration, (result, None)
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p2psip/std/rfc3921.py'...
***   File "./lib/python3.5/site-packages/p2psip/std/rfc3921.py", line 16
    def respond(*args): raise StopIteration, tuple(args) if len(args) != 1 else args # a generator function calls respond to return a response
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p2psip/std/t140.py'...
***   File "./lib/python3.5/site-packages/p2psip/std/t140.py", line 15
    print '%r'%([BEL, BS, NEWLINE, CRLF, SOS, ST, ESC, INT, BOM])
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/p2psip/std/w3c'...
Compiling './lib/python3.5/site-packages/p2psip/std/w3c/voicexml.py'...
***   File "./lib/python3.5/site-packages/p2psip/std/w3c/voicexml.py", line 60
    if xml.tag != 'vxml' or xml.xmlns != 'http://www.w3.org/2001/vxml': raise ValueError, 'Not a VoiceXML document ' + str(xml.tag) + ', xmlns=' + str(xml.xmlns)
                                                                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/p2psip/tools'...
Compiling './lib/python3.5/site-packages/p2psip/tools/htmlify.py'...
***   File "./lib/python3.5/site-packages/p2psip/tools/htmlify.py", line 51
    print 'filename=', filename
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/p2psip-2.2.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
